--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,7 @@ Use at least 2 properties that style fonts*/
         justify-content: center;
         align-items: center;
         animation: float 3s infinite;
+        overflow: hidden;
     }
 
     /*The animations, here's the scrolly bit, my friend got me started 
