--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ Use at least 2 properties that style fonts*/
     would jump straight into the foreground so it remains.*/
     
     #infinite-scrolling {
-      background-image: url('images/adventure2background.jpg');
+      background-image: url('adventure2background.jpg');
       position:relative;
       z-index: -1;
       width: 110%;
@@ -81,7 +81,7 @@ Use at least 2 properties that style fonts*/
     complicated graphics in nothing but CSS before and I am evil but 
     I am not insane.*/
     #gradienttext{
-        background-image: url(/images/textbackground.png);
+        background-image: url('textbackground.png');
         max-height: 2em;}
 
 
