--- a/styles.css
+++ b/styles.css
@@ -1,159 +1,162 @@
-/*
-Use at least 1 of each of the following:
-    A type selector
-    An ID OR class selector
-    A relational selector
-    A combination selector
-    An attribute OR pseudo-class OR a pseudo-element
-Use only relative units of measurement
-Specify colors with RGB values or hex codes
-Set the color of at least one element
-Use at least 2 properties that style fonts*/
-
-    /*This helps maintain the illusion you're on a video game menu screen by preventing you from scrolling forever.*/
-    html {
+html {
     overflow-y: hidden;
-    }
+}
 
-    /*this bit keeps a stinky white border from popping up around the body*/
-    body {
-        margin:0%;
-    }
+/*this bit keeps a stinky white border from popping up around the body*/
+body {
+    margin: 0%;
+}
 
-    /*this portion is the background image for the website, I am told
-    that an image of this size shouldn't be allowed to exist on the web
-    another addition to my many crimes*/
-    #box {
-      margin-top: -1%;
-      height: 3199px;
-      width: 100%;
-    }
+/*the boxes here all work to properly stack all these elements and get them to function properly
+    credit goes to my friend Adam, who was able to go over a few of these functions of css I was unaware of*/
 
-    /*This is the bit that sets up the background image and tells it where
-    to go on the z axis. I'm told this is also terrible practice to use
-    but for whatever reason anytime I took the z-index away the background
-    would jump straight into the foreground so it remains.*/
-    
-    #infinite-scrolling {
-      background-image: url('adventure2background.jpg');
-      position:relative;
-      z-index: -1;
-      width: 110%;
-      height: 200%; 
-      animation: scroll 15s linear infinite;
-    }
-    
-    /*Here's the header bit, I know you hate Text Shadow and this will not
-    likely change your opinion of it. But it is the only option that gets
-    close to the original menu look. still has it's defficiencies, like
-    the lower left portion of the P and other letters with right angles*/
-    h1{
-        position:absolute;
-        font-size: 2.8em;
-        margin-top: 33%;
-        margin-left: 41%;
-        align-items: center;
-        font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        text-shadow: 2px 2px 3px #FFADEF, -2px -2px 3px #ffADEF, 3px 3px 3px #FFADEF, -3px -3px 3px #FFADEF, 4px 4px 3px #FFADEF, -4px -4px 3px #FFADEF, 
-                     2px 2px 3px #FFADEF, -2px -2px 3px #ffADEF, 3px 3px 3px #FFADEF, -3px -3px 3px #FFADEF, 4px 4px 3px #FFADEF, -4px -4px 3px #FFADEF,
-                    -6px -6px 2px #000000, 6px 6px 6px #000000, -6px -6px 2px #000000, 6px 6px 2px #000000;
-    }
+#box {
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+}
 
-    /*This is the text for the footer, by the time I got to here most of 
-    this I had figured out how to do, though getting the right spacing
-    and getting that break in the <p> tag was annoying*/
-    footer{
-        z-index: 2;
-        position:absolute;
-        font-size: 1.9em;
-        font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        color: #FFFFFF;
-        margin-top: 42%;
-        margin-left: 2%;
-        line-height: 1em;
-    }
+/*this is the man container of all the background happening*/
+#box div {
+    position: absolute;
+    width: 100%;
+    height: 3199px;
+    background-repeat: repeat;
+}
 
-    /*Here's the dirty gradient texture I used, would be so much
-    better if I could get it to outline the text, but here we are.
-    spacing isn't the same as the real menu, but that's true of all the
-    actual text. I really wanted to have as little image elements in this
-    site as I could realistically handle. I've seen someone code entire
-    complicated graphics in nothing but CSS before and I am evil but 
-    I am not insane.*/
-    #gradienttext{
-        background-image: url('textbackground.png');
-        max-height: 2em;}
+/*this is the div viner, setting up how the various things in the box should behave*/
+#box div:nth-child(even) {
+    top: -3198px;
+}
 
+/*this is the stuff that enables the illusion of a continuously scrolling image to work*/
 
-    /*This is what tells the logo to do it's little floaty bounce thing
-    and makes it look a bit more interesting to actually look at. It
-    also centers the logo on the screen, and is where about 40% of my
-    time making this went. Coding is really annoying because a task that
-    sounds simple is actually incredibly complicated.*/    
-    #floating {
-        display:block;
-        margin-left: 25%;
-        margin-right: 25%;
-        margin-top: 8%;
-        width: 50%;
-        position: absolute;
-        justify-content: center;
-        align-items: center;
-        animation: float 3s infinite;
-        overflow: hidden;
-    }
+/*got the css added for the parallaxing, timing is still off, but everything works */
+.background-characters {
+    background-image: url('adventure2background.jpg');
+    /*background image*/
+    animation: 90s scroll linear infinite;
+}
 
-    /*The animations, here's the scrolly bit, my friend got me started 
-    on things, I can't remember what I originally used as a transform
-    but it was incredibly hacky and way more complicated than this
-    basically the 0% is slowly transforming into 100% over 15 seconds
-    it was fun fine tuning it to get the right result*/
-    @keyframes scroll {
-      0% {
+.blue-bubbles-fast {
+    background-image: url('blue1.png');
+    position: absolute;
+    animation: scroll 13s linear infinite;
+}
+
+/*this is the background that has blue bubbles going fast*/
+
+.blue-bubbles-slow {
+    background-image: url('blue2.png');
+    position: absolute;
+    animation: scroll 13s linear infinite;
+}
+
+/*this is the background that has blue bubbles going slowly*/
+
+.pink-bubbles-fast {
+    background-image: url('pink1.png');
+    position: absolute;
+    animation: scroll 6s linear infinite;
+}
+
+/*this is the background that has pink bubbles going fast*/
+
+.pink-bubbles-slow {
+    background-image: url('pink2.png');
+    position: absolute;
+    animation: scroll 12s linear infinite;
+}
+
+/*this is the background that has pink bubbles going slowly*/
+
+.Combo-color-bubbles {
+    background-image: url('combocolor.png');
+    position: absolute;
+    animation: scroll 19s linear infinite;
+}
+
+/*this is the background that has two colors of bubbles*/
+
+a {
+    text-decoration: none;
+}
+
+/*keeps the link from having an underline in it*/
+
+h1 {
+    position: absolute;
+    font-size: 2.8em;
+    margin-top: 33%;
+    margin-left: 41%;
+    align-items: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-shadow: 2px 2px 3px #FFADEF, -2px -2px 3px #ffADEF, 3px 3px 3px #FFADEF, -3px -3px 3px #FFADEF, 4px 4px 3px #FFADEF, -4px -4px 3px #FFADEF,
+        2px 2px 3px #FFADEF, -2px -2px 3px #ffADEF, 3px 3px 3px #FFADEF, -3px -3px 3px #FFADEF, 4px 4px 3px #FFADEF, -4px -4px 3px #FFADEF,
+        -6px -6px 2px #000000, 6px 6px 6px #000000, -6px -6px 2px #000000, 6px 6px 2px #000000;
+}
+
+/*instructions on how the Press START should look*/
+
+footer {
+    position: absolute;
+    font-size: 1.9em;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: #FFFFFF;
+    margin-top: 42%;
+    margin-left: 2%;
+    line-height: 1em;
+}
+
+/*instructions on how text is to be displayed on the footer*/
+
+#gradienttext {
+    background-image: url(textbackground.png);
+    max-height: 2em;
+}
+
+/*gradient stuff for the text in the lower left corner*/
+
+#floating {
+    display: block;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 8%;
+    width: 50%;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    animation: float 3s infinite;
+    overflow: hidden;
+}
+
+/*floating instructions for the logo*/
+
+@keyframes scroll {
+    from {
         transform: translateY(0);
-      }
-      100% {
-        transform: translateY(-50%);  
-      }
-      
     }
 
-    /*the final animation, and this is what makes the icon do it's little
-    bounce going up and down.*/
-    @keyframes float {
-        0% {
-            transform: translateY(0);
-        }
-        50%{
-            transform: translateY(-5%);
-        }
-        100%{
-            transform: translateY(0%);
-        }
-        }
-    
-    /*there's still a lot I'd like to do with this, like see if I can 
-    emulate the rest of the menus with just HTML and CSS but that'll have
-    to wait, also if you'd prefer I not do that at all I wont. This
-    just felt like a really interesting way to dig around css and see
-    how to make something look a bit more interesting than my previous
-    webpage.*/
-    
-    /*this doesn't really do anything as all text already lacks background colors
-    but I'm at a bit of a loss as how to integrate the rest of the requirements
-    while not seeming extraniouus, so this is what an Attribute selector looks
-    like. It takes all the text and says "Hey... don't have a background color"*/
-    *[text] {background-color:transparent;}
+    to {
+        transform: translateY(3198px);
+    }
 
-    /*the relational selectors are also a bit of a pain as there's just not a lot of
-    text on this site to relate to. HTML wise it's a very simple site with all the
-    work going on in the CSS, the curse of the hyperfocus. 
+}
 
+/*instructions on how to make the background move*/
 
-/*class selector*/
+@keyframes float {
+    0% {
+        transform: translateY(0);
+    }
 
-/*relational selector*/
+    50% {
+        transform: translateY(-5%);
+    }
 
-/*combination selector*/
+    100% {
+        transform: translateY(0%);
+    }
+}
 
-/*attribute*/
+/*instructions on how to make the logo float*/
